--- a/auctions/templates/auctions/accounts.html
+++ b/auctions/templates/auctions/accounts.html
@@ -92,4 +92,5 @@
     </div>
 </div>
 <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+<script src="{% static 'auctions/scripts.js' %}"></script>
 {% endblock %}
