--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -24,35 +24,35 @@
                 {% csrf_token %}
 
                 <div class="mb-3 row">
-                    <label for="title" class="col-sm-3 col-form-label text-end">Title:</label>
+                    <label for="title" class="col-sm-3 col-form-label text-end" data-label-alignment="right">Title:</label>
                     <div class="col-sm-9">
                         <input type="text" name="title" id="title" class="form-control" required>
                     </div>
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="starting_price" class="col-sm-3 col-form-label text-end">Starting Bid:</label>
+                    <label for="starting_price" class="col-sm-3 col-form-label text-end" data-label-alignment="right">Starting Bid:</label>
                     <div class="col-sm-9">
                         <input type="number" name="starting_price" id="starting_price" class="form-control" required>
                     </div>
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="description" class="col-sm-3 col-form-label text-end">Description:</label>
+                    <label for="description" class="col-sm-3 col-form-label text-end" data-label-alignment="right">Description:</label>
                     <div class="col-sm-9">
                         <textarea name="description" id="description" class="form-control" required></textarea>
                     </div>
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="image_urls" class="col-sm-3 col-form-label text-end">Image Url:</label>
+                    <label for="image_urls" class="col-sm-3 col-form-label text-end" data-label-alignment="right">Image Url:</label>
                     <div class="col-sm-9">
                         <input type="text" name="image_urls" id="image_urls" class="form-control">
                     </div>
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="status" class="col-sm-3 col-form-label text-end">Status:</label>
+                    <label for="status" class="col-sm-3 col-form-label text-end" data-label-alignment="right">Status:</label>
                     <div class="col-sm-9">
                         <select name="status" id="status" class="form-control" required>
                             {% for value, label in STATUS_CHOICES %}
@@ -63,14 +63,14 @@
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="location" class="col-sm-3 col-form-label text-end">Location:</label>
+                    <label for="location" class="col-sm-3 col-form-label text-end" data-label-alignment="right">Location:</label>
                     <div class="col-sm-9">
                         <input type="text" name="location" id="location" class="form-control" required>
                     </div>
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="category" class="col-sm-3 col-form-label text-end">Category:</label>
+                    <label for="category" class="col-sm-3 col-form-label text-end" data-label-alignment="right">Category:</label>
                     <div class="col-sm-9">
                         <input type="text" name="category" id="category" class="form-control">
                     </div>
@@ -87,7 +87,7 @@
 </div>
 
 
-<link href="{% static 'auctions/styles.css' %}" rel="stylesheet"> 
+<link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
 
-
+<script src="{% static 'auctions/scripts.js' %}"></script>
 {% endblock %}
