--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -119,15 +119,7 @@
     </div>
 
     <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+    
+    <script src="{% static 'auctions/scripts.js' %}"></script>
 
-    <script>
-        document.getElementById("close-bidding-button").addEventListener("click", function (event) {
-            // Show confirmation popup
-            let confirmClose = confirm("Are you sure you want to close this listing?");
-
-            if (!confirmClose) {
-                event.preventDefault(); // Prevent form submission if user cancels
-            }
-        });
-    </script>
 {% endblock %}
