--- a/auctions/templates/auctions/seller.html
+++ b/auctions/templates/auctions/seller.html
@@ -62,4 +62,6 @@
 
 <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
 
+<script src="{% static 'auctions/scripts.js' %}"></script>
+
 {% endblock %}
