--- a/auctions/templates/auctions/welcome.html
+++ b/auctions/templates/auctions/welcome.html
@@ -59,4 +59,6 @@
     </div>
 </div>
 <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+
+<script src="{% static 'auctions/scripts.js' %}"></script>
 {% endblock %}
