--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -15,5 +15,7 @@
     </ul>
 
     <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+    
+    <script src="{% static 'auctions/scripts.js' %}"></script>
 
 {% endblock %}
