--- a/auctions/templates/auctions/category_listings.html
+++ b/auctions/templates/auctions/category_listings.html
@@ -20,5 +20,7 @@
     {% endif %}
 
     <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+
+    <script src="{% static 'auctions/scripts.js' %}"></script>
 {% endblock %}
 
