--- a/auctions/templates/auctions/edit_listing.html
+++ b/auctions/templates/auctions/edit_listing.html
@@ -33,5 +33,6 @@
 </div>
 
 <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+<script src="{% static 'auctions/scripts.js' %}"></script>
 
 {% endblock %}
