--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -28,5 +28,6 @@
 </div>
 
 <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+<script src="{% static 'auctions/scripts.js' %}"></script>
 
 {% endblock %}
