--- a/auctions/templates/auctions/watch_list.html
+++ b/auctions/templates/auctions/watch_list.html
@@ -63,5 +63,7 @@
 
 <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
 
+<script src="{% static 'auctions/scripts.js' %}"></script>
+
 {% endblock %}
 
