--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -140,6 +140,16 @@ html, body {
     margin-top: 10px;
 }
 
+#listing-container .col-form-label.text-end {
+    text-align: right;
+}
+
+@media (max-width: 768px) {
+    #listing-container .col-form-label.text-end {
+        text-align: left !important;
+    }
+}
+
 #addcomment button, 
 #change-details button {
     margin-top: 2px;
