--- a/auctions/templates/auctions/watch_list.html
+++ b/auctions/templates/auctions/watch_list.html
@@ -26,7 +26,8 @@
                     {% if listing.status == "closed" %}
 
                         {% if winning_bids|get_item:listing.id %}
-                        <p><strong>Winning Bid Was:</strong> 
+                        <p {% if user_won_listings|get_item:listing.id %} class="winner-text" {% endif %}>
+                            <strong>Winning Bid Was:</strong> 
 
                             ${{ winning_bids|get_item:listing.id }}
 
