--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -92,7 +92,7 @@ html, body {
     gap: 10px;
     margin-top: 5px;
     flex-wrap: wrap;
-    margin: 10px auto;
+    margin-left: 10px;
 }
 
 .bid-container form {
@@ -204,8 +204,9 @@ html, body {
     outline: none;
 }
 
-#comment-section-container {
-    margin: 10px auto;
+#comment-section-container,
+#comment {
+    margin-left: 10px;
 }
 
 
