--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -92,7 +92,6 @@ html, body {
     gap: 10px;
     margin-top: 5px;
     flex-wrap: wrap;
-    margin-left: 10px;
 }
 
 .bid-container form {
@@ -151,11 +150,19 @@ html, body {
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
     .bid-container, 
     #comment-section-container,
     #comment {
-        margin-left: 20px;
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 768px) {
+    .bid-container, 
+    #comment-section-container,
+    #comment {
+        margin-left: 10px;
     }
 }
 
@@ -211,12 +218,6 @@ html, body {
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
     outline: none;
 }
-
-#comment-section-container,
-#comment {
-    margin-left: 10px;
-}
-
 
 #comment-section-container li {
     list-style-type: none;
