--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -11,6 +11,7 @@
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
         <script src="{% static 'auctions/scripts.js' %}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="icon" href="{% static 'auctions/favicon.ico' %}" type="image/x-icon">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-white">
